--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "react-app-polyfill": "^1.0.4",
     "react-collapse": "^5.0.0",
     "react-dom": "^16.9.0",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.1"
   },
-  "proxy" : "http://localhost:3000",
+  "proxy": "http://localhost:3000",
   "scripts": {
     "start": "set PORT = 3001 && react-scripts start",
     "build": "react-scripts build"
